# ssq-predictor

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  ssq_history.csv  tauri.conf.json
src-tauri/src/: analyzer.rs  data_manager.rs  fetcher.rs  lib.rs  main.rs  models.rs
